{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 255,
  "lineage": "e4f768ce-97ce-503d-4066-f7f0a3f920e3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "learning-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:669576612384:loadbalancer/app/learning-alb/f29d5ac7c4446d0a",
            "arn_suffix": "app/learning-alb/f29d5ac7c4446d0a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "learning-alb-635002337.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:669576612384:loadbalancer/app/learning-alb/f29d5ac7c4446d0a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "learning-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09beaaaa723010bef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b4faae153129431"
              },
              {
                "subnet_id": "subnet-00e03dc8eff8a9efc"
              },
              {
                "subnet_id": "subnet-0da18f56426018f52"
              }
            ],
            "subnets": [
              "subnet-00b4faae153129431",
              "subnet-00e03dc8eff8a9efc",
              "subnet-0da18f56426018f52"
            ],
            "tags": {
              "Name": "terraform-learning-alb"
            },
            "tags_all": {
              "Name": "terraform-learning-alb"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.securityGroup.aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0f232a34a8fc94b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01e3a5213c15ed515",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0f232a34a8fc94b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routeTable.aws_route_table.private",
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00087266ffdfd72b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0926c4430bc510597",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00087266ffdfd72b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routeTable.aws_route_table.private",
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078a78ad7f002ca5b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-096cea5dfb3d3685b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078a78ad7f002ca5b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routeTable.aws_route_table.private",
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0346c9e4147eef602",
            "id": "r-rtb-01c8e4b48e9cea4af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c8e4b48e9cea4af",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routeTable.aws_route_table.public",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:route-table/rtb-0c0f232a34a8fc94b",
            "id": "rtb-0c0f232a34a8fc94b",
            "owner_id": "669576612384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e3a5213c15ed515",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rtable-private-0"
            },
            "tags_all": {
              "Name": "terraform-rtable-private-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:route-table/rtb-00087266ffdfd72b8",
            "id": "rtb-00087266ffdfd72b8",
            "owner_id": "669576612384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0926c4430bc510597",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rtable-private-1"
            },
            "tags_all": {
              "Name": "terraform-rtable-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:route-table/rtb-078a78ad7f002ca5b",
            "id": "rtb-078a78ad7f002ca5b",
            "owner_id": "669576612384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-096cea5dfb3d3685b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rtable-private-2"
            },
            "tags_all": {
              "Name": "terraform-rtable-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:route-table/rtb-01c8e4b48e9cea4af",
            "id": "rtb-01c8e4b48e9cea4af",
            "owner_id": "669576612384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0346c9e4147eef602",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rtable-public"
            },
            "tags_all": {
              "Name": "terraform-rtable-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffe94e0eff390da1",
            "route_table_id": "rtb-0c0f232a34a8fc94b",
            "subnet_id": "subnet-0689a353f8478219f"
          },
          "dependencies": [
            "module.routeTable.aws_route_table.private",
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0452bff1dc0acaeb8",
            "route_table_id": "rtb-00087266ffdfd72b8",
            "subnet_id": "subnet-0150c62c355f8736a"
          },
          "dependencies": [
            "module.routeTable.aws_route_table.private",
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004c9ca1b66a16123",
            "route_table_id": "rtb-078a78ad7f002ca5b",
            "subnet_id": "subnet-0a31aa4aac4db83aa"
          },
          "dependencies": [
            "module.routeTable.aws_route_table.private",
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_nat_gateway.learning-ngw",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045b4d57ddda22118",
            "route_table_id": "rtb-01c8e4b48e9cea4af",
            "subnet_id": "subnet-00b4faae153129431"
          },
          "dependencies": [
            "module.routeTable.aws_route_table.public",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01946a29cc138bfd1",
            "route_table_id": "rtb-01c8e4b48e9cea4af",
            "subnet_id": "subnet-0da18f56426018f52"
          },
          "dependencies": [
            "module.routeTable.aws_route_table.public",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086c3c8cad0158507",
            "route_table_id": "rtb-01c8e4b48e9cea4af",
            "subnet_id": "subnet-00e03dc8eff8a9efc"
          },
          "dependencies": [
            "module.routeTable.aws_route_table.public",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:security-group/sg-09beaaaa723010bef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09beaaaa723010bef",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "669576612384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-learn-alb-sg"
            },
            "tags_all": {
              "Name": "terraform-learn-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:security-group-rule/sgr-0313432261e0bb4b7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0313432261e0bb4b7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09beaaaa723010bef",
            "security_group_rule_id": "sgr-0313432261e0bb4b7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.alb-sg",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:security-group-rule/sgr-003f5b7815512e17c",
            "cidr_ipv4": "172.16.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-003f5b7815512e17c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09beaaaa723010bef",
            "security_group_rule_id": "sgr-003f5b7815512e17c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.alb-sg",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "learning-vpc-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0432899fba4326ac4",
            "association_id": "eipassoc-0b5edc7037ce5eccd",
            "domain": "vpc",
            "id": "eipalloc-0432899fba4326ac4",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0554dd3fd3540323c",
            "private_dns": "ip-172-16-0-90.ap-northeast-1.compute.internal",
            "private_ip": "172.16.0.90",
            "public_dns": "ec2-35-79-31-156.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.79.31.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-vpc-eip-0"
            },
            "tags_all": {
              "Name": "terraform-vpc-eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0015f0105da0f4b0c",
            "association_id": "eipassoc-0702a39c98902f254",
            "domain": "vpc",
            "id": "eipalloc-0015f0105da0f4b0c",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-057f980652a985d6b",
            "private_dns": "ip-172-16-1-152.ap-northeast-1.compute.internal",
            "private_ip": "172.16.1.152",
            "public_dns": "ec2-52-199-100-226.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.100.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-vpc-eip-1"
            },
            "tags_all": {
              "Name": "terraform-vpc-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e03ac8f9a69226c9",
            "association_id": "eipassoc-0fe2fa5215e339641",
            "domain": "vpc",
            "id": "eipalloc-0e03ac8f9a69226c9",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-06757c6275db1279a",
            "private_dns": "ip-172-16-2-151.ap-northeast-1.compute.internal",
            "private_ip": "172.16.2.151",
            "public_dns": "ec2-18-182-231-183.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.231.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-vpc-eip-2"
            },
            "tags_all": {
              "Name": "terraform-vpc-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "learning-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:internet-gateway/igw-0346c9e4147eef602",
            "id": "igw-0346c9e4147eef602",
            "owner_id": "669576612384",
            "tags": {
              "Name": "terraform-vpc-igw"
            },
            "tags_all": {
              "Name": "terraform-vpc-igw"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "learning-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0432899fba4326ac4",
            "association_id": "eipassoc-0b5edc7037ce5eccd",
            "connectivity_type": "public",
            "id": "nat-01e3a5213c15ed515",
            "network_interface_id": "eni-0554dd3fd3540323c",
            "private_ip": "172.16.0.90",
            "public_ip": "35.79.31.156",
            "subnet_id": "subnet-00b4faae153129431",
            "tags": {
              "Name": "terraform-nat-gateway-0"
            },
            "tags_all": {
              "Name": "terraform-nat-gateway-0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0015f0105da0f4b0c",
            "association_id": "eipassoc-0702a39c98902f254",
            "connectivity_type": "public",
            "id": "nat-0926c4430bc510597",
            "network_interface_id": "eni-057f980652a985d6b",
            "private_ip": "172.16.1.152",
            "public_ip": "52.199.100.226",
            "subnet_id": "subnet-0da18f56426018f52",
            "tags": {
              "Name": "terraform-nat-gateway-1"
            },
            "tags_all": {
              "Name": "terraform-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e03ac8f9a69226c9",
            "association_id": "eipassoc-0fe2fa5215e339641",
            "connectivity_type": "public",
            "id": "nat-096cea5dfb3d3685b",
            "network_interface_id": "eni-06757c6275db1279a",
            "private_ip": "172.16.2.151",
            "public_ip": "18.182.231.183",
            "subnet_id": "subnet-00e03dc8eff8a9efc",
            "tags": {
              "Name": "terraform-nat-gateway-2"
            },
            "tags_all": {
              "Name": "terraform-nat-gateway-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.learning-vpc-eip",
            "module.vpc.aws_internet_gateway.learning-igw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:subnet/subnet-0689a353f8478219f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0689a353f8478219f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669576612384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-private-subnet-0"
            },
            "tags_all": {
              "Name": "terraform-vpc-private-subnet-0"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:subnet/subnet-0150c62c355f8736a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0150c62c355f8736a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669576612384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:subnet/subnet-0a31aa4aac4db83aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.16.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a31aa4aac4db83aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669576612384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:subnet/subnet-00b4faae153129431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b4faae153129431",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669576612384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-public-subnet-0"
            },
            "tags_all": {
              "Name": "terraform-vpc-public-subnet-0"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:subnet/subnet-0da18f56426018f52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da18f56426018f52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669576612384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:subnet/subnet-00e03dc8eff8a9efc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e03dc8eff8a9efc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669576612384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-07d0e981d5c0b4b9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.learning-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "learning-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:669576612384:vpc/vpc-07d0e981d5c0b4b9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-014135e119d6f610d",
            "default_route_table_id": "rtb-0945b137890916c19",
            "default_security_group_id": "sg-0b0ba59cac2999bbc",
            "dhcp_options_id": "dopt-0249fcb10bc7e3879",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d0e981d5c0b4b9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0945b137890916c19",
            "owner_id": "669576612384",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}